Fixed overflow styling for group repo access tokens, so it wraps even when there are no spaces #fix Also refactored to use an Id, and a class for styling overflow in access tokens and repo project Ids #refactor

--- a/portfolio/src/main/resources/static/css/styles.css
+++ b/portfolio/src/main/resources/static/css/styles.css
@@ -19,7 +19,6 @@ section {
     margin-left: auto;
 }
 
-
 .center {
     display: flex;
     flex-direction: column;
@@ -703,7 +702,6 @@ section {
     box-shadow: rgba(0, 0, 0, 0.05) 0 6px 24px 0, rgba(0, 0, 0, 0.08) 0 0 0 1px;
 }
 
-
 .group {
     position: relative;
     width: 40rem;
@@ -725,7 +723,6 @@ section {
 #groupTableBody .ui-selected {
     background-color: var(--main-border-colour)
 }
-
 
 .colourForDrag {
     background-color: var(--main-border-colour);
@@ -851,6 +848,10 @@ section {
 
 #groupSettingsPageRepoName {
     flex-grow: 1;
+}
+
+.groupRepoInfo {
+    overflow-wrap: anywhere;
 }
 
 .editRepo:hover {
@@ -1062,17 +1063,17 @@ section {
 }
 
 #addEvidenceModal {
-  display: none;
-  position: fixed;
-  z-index: 5;
-  padding-top: 100px;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  overflow: auto;
-  background-color: rgb(0,0,0);
-  background-color: rgba(0,0,0,0.4);
+    display: none;
+    position: fixed;
+    z-index: 5;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
 }
 
 .modal-content {
@@ -1153,12 +1154,11 @@ section {
 
 /* Chips */
 
-.evidencePreviewTags, #evidenceDetailsSkills{
+.evidencePreviewTags, #evidenceDetailsSkills {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
 }
-
 
 .chip {
     padding: 0.2rem 1rem 0.2rem;
@@ -1211,6 +1211,7 @@ section {
 
 
 /* skills page */
+
 .flexContainer {
     display: flex;
     flex-direction: row;
